--- a/html/categories.html
+++ b/html/categories.html
@@ -57,7 +57,6 @@
           </li>
           <li><a href="random.html">Random</a></li>
           <li><a href="submit.html">Submit</a></li>
-          <li><a href="about.html">About</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
         	<li><a href="login.html">Login</a></li>
@@ -75,12 +74,72 @@
 
 	<div class="container" id="body">
 		<div class="row">
-			<div class="col-sm-8">
+			<div class="col-sm-8 categories">
 				<h1><em>Categories</em></h1><hr><br>
 				<div class="row">
 					<div class="col-sm-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <img class="img-responsive center-block" src="../pictures/haruhi.gif"/>
+              </div>
+              <div class="panel-footer text-center">
+                <h4>Smug</h4>
+              </div>
+            </div>
 					</div>
-				</div>	
+          <div class="col-sm-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <img class="img-responsive center-block" src="../pictures/pepe.jpg"/>
+              </div>
+              <div class="panel-footer text-center">
+                <h4>Pepe</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <img class="img-responsive center-block" src="../pictures/tech.png"/>
+              </div>
+              <div class="panel-footer text-center">
+                <h4>Tech</h4>
+              </div>
+            </div>
+          </div>
+				</div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <img class="img-responsive center-block" src="../pictures/doge.jpg"/>
+              </div>
+              <div class="panel-footer text-center">
+                <h4>Doge</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <img class="img-responsive center-block" src="../pictures/wonka.jpg"/>
+              </div>
+              <div class="panel-footer text-center">
+                <h4>Wonka</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <img class="img-responsive center-block" src="../pictures/dankest.jpg"/>
+              </div>
+              <div class="panel-footer text-center">
+                <h4>The Dankest Dank</h4>
+              </div>
+            </div>
+          </div>
+        </div>
 			</div>
 			<div class="col-sm-4" id="sidebar">
 			    <div id="tweets">
