--- a/html/categories.html
+++ b/html/categories.html
@@ -55,7 +55,7 @@
             	<li><a href="categories.html">Categories</a></li>
             </ul>
           </li>
-          <li><a href="random.html">Random</a></li>
+          <li><a href="#">Random</a></li>
           <li><a href="submit.html">Submit</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -135,7 +135,7 @@
                 <img class="img-responsive center-block" src="../pictures/dankest.jpg"/>
               </div>
               <div class="panel-footer text-center">
-                <h4>The Dankest Dank</h4>
+                <h4>Dankest Dank</h4>
               </div>
             </div>
           </div>
