--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
             	<li><a href="categories.html">Categories</a></li>
             </ul>
           </li>
-          <li><a href="random.html">Random</a></li>
+          <li><a href="#">Random</a></li>
           <li><a href="submit.html">Submit</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
