--- a/html/submit.html
+++ b/html/submit.html
@@ -10,7 +10,7 @@
     <meta name="description" content="DankTank is very dank.">
 
     <!-- Page Title -->
-    <title>DankTank Login</title>
+    <title>DankTank Upload</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../pictures/logo.jpg" type="image/x-icon"> 
@@ -75,18 +75,14 @@
 	<div class="container" id="body">
 		<div class="row">
 			<div class="col-sm-8">
-				<h1><em>DankTank Login</em></h1><hr><br>
+				<h1><em>Submit Your Own Dank Meme</em></h1><hr><br>
         <div class="panel panel-default center-block panel-login">
           <div class="panel-body">
             <div class="form-group">
-              <label for="usr">Dankername:</label>
-              <input type="text" class="form-control" id="usr">
+              <label for="title">Title:</label>
+              <input type="text" class="form-control" id="title">
             </div>
-            <div class="form-group">
-              <label for="pwd">Password:</label>
-              <input type="password" class="form-control" id="pwd">
-            </div>
-            <button type="button" class="btn btn-primary">Login</button>
+            <button type="button" class="btn btn-primary">Upload</button>
           </div>
         </div>
 			</div>
